modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-rbac-wildcards/constraints/policy_1.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8AllowRbacWildcards
metadata:
  name: security-policy-test
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["Role", "RoleBinding"]
