modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-rbac-wildcards/rendered/test_samples/pods/001-role-without-wildcards-allowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
    name: role-valid
    namespace: testns
rules:
    - apiGroups:
        - ""
      resources:
        - pods
      verbs:
        - get
        - list
spec:
    containers:
        - image: nginx
          name: nginx
