modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-rbac-wildcards/rendered/test_samples/pods/002-role-with-wildcard-in-rules-denied.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
    name: role-invalid-rules
    namespace: testns
rules:
    - apiGroups:
        - '*'
      resources:
        - '*'
      verbs:
        - '*'
spec:
    containers:
        - image: nginx
          name: nginx
