modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-rbac-wildcards/rendered/test_samples/pods/003-rolebinding-without-wildcards-allowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
    name: rolebinding-valid
    namespace: testns
roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: role-valid
spec:
    containers:
        - image: nginx
          name: nginx
subjects:
    - kind: ServiceAccount
      name: sa-valid
      namespace: testns
