modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-rbac-wildcards/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: allow-rbac-wildcards
tests:
  - name: custom-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: Role without wildcards (allowed)
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-role-without-wildcards-allowed.yaml
        assertions:
          - violations: "no"
      - name: Role with wildcard in rules (denied)
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-role-with-wildcard-in-rules-denied.yaml
        assertions:
          - violations: "yes"
      - name: RoleBinding without wildcards (allowed)
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-rolebinding-without-wildcards-allowed.yaml
        assertions:
          - violations: "no"
      - name: RoleBinding with wildcard in roleRef (denied)
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-rolebinding-with-wildcard-in-roleref-denied.yaml
        assertions:
          - violations: "yes"
